--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,8 @@ flutter:
       style: italic
     - asset: assets/fonts/Product-Sans-Bold.ttf
       weight: 700
-
+  - family: Poppins
+    fonts:
+    - asset: assets/fonts/Poppins.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
