--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A flutter boilerplate project created using MobX and Provider.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
   flutter:
@@ -18,22 +18,21 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
-  flutter_cupertino_localizations: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.5
 
   # The following adds the shared pref as a dependency in your application
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.1.0
 
   # A composable, Future-based library for making HTTP requests.
-  http: ^0.13.3
+  http: ^0.13.5
 
   # MobX is a library for reactively managing the state of your applications. Use the power of
   # observables, actions, and reactions to supercharge your Dart and Flutter apps.
-  mobx: ^2.0.1
-  flutter_mobx: ^2.0.0
+  mobx: ^2.1.4
+  flutter_mobx: ^2.0.6+5
 
   # An helper to easily exposes a value using InheritedWidget without having to write one.
   provider: ^5.0.0
@@ -46,27 +45,25 @@ dependencies:
 
   # A flexible widget for user notification. Customize your text, button, duration, animations
   # and much more. For Android devs, it is made to replace Snackbars and Toasts.
-  another_flushbar: ^1.10.23
+  another_flushbar: ^1.12.29
 
   # Material Dialog
   material_dialog: ^1.0.0-nullsafety.1
-  # Sliding card
-  sliding_card: ^0.1.2
   # This package provides internationalization and localization facilities, including message
   # translation, plurals and genders, date/number formatting and parsing, and bidirectional text.
-  intl: ^0.17.0
+  intl: ^0.19.0
 
   # XXTEA is a fast and secure encryption algorithm. This is a XXTEA library for Dart.
   xxtea: ^2.1.0
 
   # An helper to easily exposes a value using InheritedWidget without having to write one.
-  sembast: ^3.1.0+2
+  sembast: ^3.4.4
   path_provider: ^2.0.2
 
   # for dependency injection
-  get_it: ^7.1.3
+  get_it: ^7.2.0
 
-  google_fonts: ^2.3.2
+  google_fonts: ^4.0.3
 
   flutter_osm_plugin: ^0.40.3
 
@@ -80,10 +77,10 @@ dev_dependencies:
   # run below mentioned commands to generate launcher icons
   # flutter packages get
   # flutter packages pub run flutter_launcher_icons:main
-  flutter_launcher_icons: ^0.9.0
-  mobx_codegen: ^2.0.1+3
-  build_runner: ^1.12.2
-  analyzer: ^1.4.0
+  flutter_launcher_icons: ^0.13.1
+  mobx_codegen: ^2.2.0
+  build_runner: ^2.3.3
+  analyzer: ^5.10.0
 
 flutter_icons:
   image_path: "assets/icons/ic_launcher.png"
