--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
 
   geolocator: ^9.0.2
 
+  file_picker: ^8.0.7
+  image_picker: ^1.0.4
+  permission_handler: ^10.4.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
