--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   file_picker: ^8.0.7
   image_picker: ^1.0.4
   permission_handler: ^10.4.5
+  camera: ^0.10.5+5
 
 dev_dependencies:
   flutter_test:
