--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,4 @@
-name: boilerplate
-description: A flutter boilerplate project created using MobX and Provider.
+name: ecotrip
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -35,13 +34,13 @@ dependencies:
   flutter_mobx: ^2.0.6+5
 
   # An helper to easily exposes a value using InheritedWidget without having to write one.
-  provider: ^5.0.0
+  provider: ^6.1.2
 
   # String validation and sanitization for Dart. Dart 2-compatible version of validator
   validators: ^3.0.0
 
   # A powerful Http client for Dart
-  dio: ^4.0.0
+  dio: ^5.7.0
 
   # A flexible widget for user notification. Customize your text, button, duration, animations
   # and much more. For Android devs, it is made to replace Snackbars and Toasts.
@@ -61,18 +60,18 @@ dependencies:
   path_provider: ^2.0.2
 
   # for dependency injection
-  get_it: ^7.2.0
+  get_it: ^8.0.1
 
-  google_fonts: ^4.0.3
+  google_fonts: ^6.2.1
 
-  flutter_osm_plugin: ^0.40.3
+  flutter_osm_plugin: ^1.3.5
 
-  geolocator: ^9.0.2
+  geolocator: ^13.0.1
 
   file_picker: ^8.0.7
   image_picker: ^1.0.4
-  permission_handler: ^10.4.5
-  camera: ^0.10.5+5
+  permission_handler: ^11.3.1
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
@@ -82,10 +81,10 @@ dev_dependencies:
   # run below mentioned commands to generate launcher icons
   # flutter packages get
   # flutter packages pub run flutter_launcher_icons:main
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.1
   mobx_codegen: ^2.2.0
   build_runner: ^2.3.3
-  analyzer: ^5.10.0
+  analyzer: ^6.7.0
 
 flutter_icons:
   image_path: "assets/icons/ic_launcher.png"
