--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ name: ecotrip
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -18,56 +18,24 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-
-  # The following adds the shared pref as a dependency in your application
   shared_preferences: ^2.1.0
-
-  # A composable, Future-based library for making HTTP requests.
   http: ^1.2.1
-
-  # MobX is a library for reactively managing the state of your applications. Use the power of
-  # observables, actions, and reactions to supercharge your Dart and Flutter apps.
   mobx: ^2.1.4
   flutter_mobx: ^2.0.6+5
-
-  # An helper to easily exposes a value using InheritedWidget without having to write one.
   provider: ^6.1.2
-
-  # String validation and sanitization for Dart. Dart 2-compatible version of validator
   validators: ^3.0.0
-
-  # A powerful Http client for Dart
   dio: ^5.7.0
-
-  # A flexible widget for user notification. Customize your text, button, duration, animations
-  # and much more. For Android devs, it is made to replace Snackbars and Toasts.
   another_flushbar: ^1.12.29
-
-  # Material Dialog
   material_dialog: ^1.0.0-nullsafety.1
-  # This package provides internationalization and localization facilities, including message
-  # translation, plurals and genders, date/number formatting and parsing, and bidirectional text.
   intl: ^0.19.0
-
-  # XXTEA is a fast and secure encryption algorithm. This is a XXTEA library for Dart.
   xxtea: ^2.1.0
-
-  # An helper to easily exposes a value using InheritedWidget without having to write one.
   sembast: ^3.4.4
   path_provider: ^2.0.2
-
-  # for dependency injection
   get_it: ^8.0.1
-
   google_fonts: ^6.2.1
-
   flutter_osm_plugin: ^1.3.5
-
   geolocator: ^13.0.1
-
   file_picker: ^8.0.7
   image_picker: ^1.0.4
   permission_handler: ^11.3.1
