--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.0.4
   permission_handler: ^11.3.1
   camera: ^0.11.0+2
+  dart_jsonwebtoken: ^2.14.1
 
 dev_dependencies:
   flutter_test:
