--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^11.3.1
   camera: ^0.11.0+2
   dart_jsonwebtoken: ^2.14.1
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,6 @@ flutter_icons:
   android: true
   ios: true
 
-
 # For information on the generic Dart art of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
@@ -77,6 +77,7 @@ flutter:
   - assets/images/
   - assets/icons/
   - assets/lang/
+  - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
