put bad certificate allow behind dev flag

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
-BACKEND_URL=https://ecotrip.juanveliz.org
-ENV=prod
-# BACKEND_URL=https://rpi/ecotrip
+# BACKEND_URL=https://ecotrip.juanveliz.org
+ENV=dev
+BACKEND_URL=https://rpi/ecotrip
