update app icon and name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dev_dependencies:
   build_runner: ^2.3.3
   analyzer: ^6.7.0
 
-flutter_icons:
-  image_path: "assets/icons/ic_launcher.png"
+flutter_launcher_icons:
+  image_path: "assets/icons/eco-trip_appicon.png"
   android: true
   ios: true
 
