--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
-        android:label="test_app"
+        android:label="Eco-Trip"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
