update commented env for prod

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
-# BACKEND_URL=https://ecotrip.juanveliz.org
+# BACKEND_URL=https://ecotrip.juanveliz.org/
 ENV=dev
 BACKEND_URL=https://rpi/ecotrip
