--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   get_it: ^8.0.1
   google_fonts: ^6.2.1
   flutter_osm_plugin: ^1.3.5
-  geolocator: ^13.0.1
+  geolocator: ^13.0.2
   file_picker: ^8.0.7
   image_picker: ^1.0.4
   permission_handler: ^11.3.1
@@ -43,6 +43,7 @@ dependencies:
   dart_jsonwebtoken: ^2.14.1
   flutter_dotenv: ^5.2.1
   calendar_date_picker2: ^1.1.8
+  maptiler_flutter: ^0.1.0
 
 dev_dependencies:
   flutter_test:
