remove apikey from env so github doesn't complain

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # BACKEND_URL=https://ecotrip.juanveliz.org/
 ENV=dev
 BACKEND_URL=https://rpi/ecotrip
-MAPTILER_API_KEY=M3XIMrpYEYcAKmTdlsx6
+MAPTILER_API_KEY=<MAPTILER_API_KEY>
