--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-# BACKEND_URL=https://ecotrip.juanveliz.org/
-ENV=dev
-BACKEND_URL=https://rpi/ecotrip/
+BACKEND_URL=https://ecotripdev.juanveliz.org/ecotrip
+# ENV=dev
+# BACKEND_URL=https://rpi/ecotrip/
 MAPTILER_API_KEY=M3XIMrpYEYcAKmTdlsx6
