--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,23 +28,24 @@ dependencies:
   dio: ^5.7.0
   another_flushbar: ^1.12.29
   material_dialog: ^1.0.0-nullsafety.1
-  intl: ^0.19.0
+  intl: 0.20.2
   xxtea: ^2.1.0
   sembast: ^3.4.4
   path_provider: ^2.0.2
   get_it: ^8.0.1
   google_fonts: ^6.2.1
   flutter_osm_plugin: ^1.3.5
-  geolocator: ^13.0.2
-  file_picker: ^8.0.7
+  geolocator: ^14.0.2
+  file_picker: ^10.2.0
   image_picker: ^1.0.4
   permission_handler: ^11.3.1
   camera: ^0.11.0+2
-  dart_jsonwebtoken: ^2.14.1
+  dart_jsonwebtoken: ^3.2.0
   flutter_dotenv: ^5.2.1
-  calendar_date_picker2: ^1.1.8
-  maptiler_flutter: ^0.1.0
+  calendar_date_picker2: ^2.0.1
   url_launcher: ^6.3.1
+  flutter_chat_core: ^2.0.0
+  flutter_chat_ui: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
   mobx_codegen: ^2.2.0
   build_runner: ^2.3.3
-  analyzer: ^6.7.0
+  analyzer: ^7.5.4
 
 dependency_overrides:
   maptiler_flutter:
